<resources>
    <string name="app_name" translatable="false">Recode</string>

    <string name="appodealappid" translatable="false">bfd0ea8bc00b5fc32d57ebba45d68acd9d71f4712414f5f4</string>


    <string name="interneterror">Please connect to the internet</string>
    <string name="watchearn">Watch &amp; Earn</string>
    <string name="spinearn">Spin &amp; Earn</string>
    <string name="luckyspin">Lucky Spin</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="tryagain">Try Again</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="rateus">Rate Us</string>
    <string name="shareapp">Share App</string>
    <string name="history">Orders</string>
    <string name="market">Shop</string>
    <string name="signout">Sign Out</string>
    <string name="invitecode">People Who Used My Invite Code</string>

    <string name="start_to_earn">Start to Earn</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="registered_on">Registered On</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="total_balance">Total Balance ($)</string>
    <string name="the_amount_you_want_to_withdraw">The amount you want to withdraw</string>
    <string name="your_wallet_address">Your Wallet Address</string>
    <string name="conf_rm">Confırm</string>
    <string name="spin_amp_earn"><![CDATA[Spin & Earn]]></string>
    <string name="point">Point:</string>
    <string name="sp_n">Spın</string>
    <string name="diamonds">Diamonds</string>
    <string name="golds">Golds</string>
    <string name="invite_code">Invite Code</string>
    <string name="check">Check</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="watch_amp_earn"><![CDATA[Watch & Earn]]></string>
    <string name="try_again">Please Try Again.</string>
    <string name="convert">Convert Diamonds</string>
    <string name="inviteearn">Invite &amp; Earn</string>
    <string name="buy">Buy</string>
    <string name="order_not_found">Order Not Found!</string>
    <string name="invite_your_friends_and_get_50_diamonds_for_each">Invite your friends and get 50 diamonds for each!</string>
    <string name="minimum">Minimum 250 diamonds required.</string>
    <string name="save">Save</string>
    <string name="myreferrals">My Referrals</string>
    <string name="addeddia">Diamonds Added</string>
    <string name="forgotinfo">Please check your mail and spam box.</string>
    <string name="register">Register</string>
    <string name="comeon">Next Turn</string>
    <string name="about">About App</string>
    <string name="info">You earn diamonds by spinning the wheel, watching ads and inviting your friends. You can buy game codes from the store by converting these diamonds into gold. 250 diamonds equal 1 gold. You get 50 diamonds when you invite a friend, and 3 diamonds when you watch an ad.</string>
    <string name="nobalance">Insufficient Balance!</string>
    <string name="succes">Purchase Successful.</string>
    <string name="get_premium">GET PREMIUM</string>
    <string name="premium_info">2X Spin Revenue.\n Access the dice game. \n This is a one-time payment.</string>
    <string name="dice">Play Dice</string>
    <string name="play">Play</string>
    <string name="goladded">Gold added.</string>
    <string name="upgrade_your_account_to_premium_and_enjoy_the_app_without_ads">To get as many diamonds as the sum of the two dice you roll, you need to upgrade your account.</string>

</resources>