<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/premium_bg"

    tools:context=".activities.LuckySpinActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        app:title=""

        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_premium"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/sugarsnow"/>


    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:gravity="center"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/sugarsnow"
        android:text="@string/premium_info"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_above="@id/makePurchase"
        android:src="@drawable/higher_order_functions_svgrepo_com"
        android:layout_centerInParent="true"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:textColor="@color/white"
        android:fontFamily="@font/sugarsnow"
        android:text="@string/buy"
        android:textSize="20sp"
        android:id="@+id/makePurchase"
        android:layout_centerInParent="true"/>


</RelativeLayout>