<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"

    tools:context=".activities.EditProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        app:title=""
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:fontFamily="@font/alata"
            android:textColor="#FFEB3B"
            android:textSize="16sp"/>

    </androidx.appcompat.widget.Toolbar>


    <androidx.cardview.widget.CardView
        android:id="@+id/workerlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_4sdp"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_bg"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">



            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:background="@drawable/rect_border"
                android:fontFamily="@font/alata"
                android:hint="@string/username"
                android:padding="@dimen/_8sdp"
                android:maxLines="1"
                android:backgroundTint="#FFEB3B"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/usermail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:background="@drawable/rect_border"
                android:fontFamily="@font/alata"
                android:backgroundTint="#FFEB3B"

                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:enabled="false"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/registerdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:background="@drawable/rect_border"
                android:backgroundTint="#FFEB3B"

                android:fontFamily="@font/alata"
                android:hint="@string/registered_on"
                android:inputType="textEmailAddress"
                android:enabled="false"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/continueBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:textSize="18sp"
                android:fontFamily="@font/alata"
                android:text="@string/save" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <com.appodeal.ads.BannerView
        android:id="@+id/appodealBannerView"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</RelativeLayout>