<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/main_bg"

    android:layout_height="match_parent"
    tools:context=".activities.SpinActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        app:title=""

        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spinearn"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/sugarsnow"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userPoint"
            android:text=""
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/_15sdp"
            android:textColor="@color/white"
            android:fontFamily="@font/sugarsnow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diamonds"
            android:textColor="@color/white"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="@font/sugarsnow"
            android:layout_gravity="end"/>




    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:id="@+id/luckylay"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/pointer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_down"
            android:textColor="@color/white"
            android:textSize="70sp" />

        <ImageView
            android:layout_width="@dimen/_450sdp"
            android:layout_height="@dimen/_300sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:src="@drawable/cark"
            android:id="@+id/luckyWheel"/>


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/spinBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:textSize="20sp"
        android:fontFamily="@font/sugarsnow"
        android:layout_alignParentBottom="true"
        android:text="@string/sp_n"
        android:textColor="@color/white" />



</RelativeLayout>