<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_bg"

    tools:context=".activities.LoginActivity">


    <LinearLayout
        android:id="@+id/loginInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/showLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_7sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/login"
            android:background="@drawable/rect_border"
            android:backgroundTint="#FFEB3B"
            android:fontFamily="@font/alata"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/showRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:background="@drawable/rect_border"
            android:padding="@dimen/_7sdp"
            android:text="@string/register"
            android:backgroundTint="#FFEB3B"
            android:fontFamily="@font/alata"

            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginInfoLayout"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_3sdp"
        app:cardElevation="@dimen/_3sdp"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/_10sdp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/emailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rect_border"
                    android:backgroundTint="#FFEB3B"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableTint="@color/white"
                    android:fontFamily="@font/alata"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="15sp" />


                <EditText
                    android:id="@+id/passwordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/rect_border"
                    android:backgroundTint="#FFEB3B"
                    android:drawableStart="@drawable/ic_baseline_password_24"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableTint="@color/white"
                    android:fontFamily="@font/alata"

                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="15sp" />


                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/button_background"
                    android:backgroundTint="#FFC107"

                    android:fontFamily="@font/alata"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="?android:selectableItemBackground"
                    android:fontFamily="@font/alata"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </ScrollView>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginInfoLayout"
        android:layout_centerInParent="true"
        android:id="@+id/registerLayout"
        android:layout_marginTop="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_3sdp"
        app:cardElevation="@dimen/_3sdp"
        app:cardUseCompatPadding="true"
        android:visibility="gone"
        app:contentPadding="@dimen/_10sdp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_8sdp"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/emailRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableTint="@color/white"
                    android:hint="@string/email"
                    android:fontFamily="@font/alata"
                    android:background="@drawable/rect_border"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="#FFEB3B"

                    android:maxLines="1"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>




                <EditText
                    android:id="@+id/passwordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:drawableStart="@drawable/ic_baseline_password_24"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableTint="@color/white"
                    android:backgroundTint="#FFEB3B"

                    android:hint="@string/password"
                    android:fontFamily="@font/alata"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/rect_border"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:textSize="15sp" />



                <EditText
                    android:id="@+id/usernameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="@dimen/_5sdp"
                    android:drawableTint="@color/white"
                    android:hint="@string/username"
                    android:fontFamily="@font/alata"
                    android:backgroundTint="#FFEB3B"

                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/rect_border"
                    android:maxLines="1"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/button_background"
                    android:backgroundTint="#FF9800"
                    android:text="@string/register"
                    android:fontFamily="@font/alata"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />


            </LinearLayout>


        </ScrollView>

    </androidx.cardview.widget.CardView>




</RelativeLayout>